Add: lab relationship to scientist show page

--- a/app/views/scientists/show.html.erb
+++ b/app/views/scientists/show.html.erb
@@ -1,3 +1,4 @@
 <h1>Name: <%= @scientist.name %></h1>
 <p>Specialty: <%= @scientist.specialty %></p>
 <p>University: <%= @scientist.university %></p>
+<p>Current Lab: <%= @scientist.lab.name %></p>
