Add: all scientists names to the lab show page

--- a/app/views/labs/show.html.erb
+++ b/app/views/labs/show.html.erb
@@ -1,1 +1,8 @@
 <h1><%= @lab.name %></h1>
+
+<h3>Current Scientists:</h3>
+<% @lab.scientists.each do |scientist| %>
+  <ul>
+    <li><%= scientist.name %></li>
+  </ul>
+<% end %>
