--- a/app/views/labs/show.html.erb
+++ b/app/views/labs/show.html.erb
@@ -1,8 +1,8 @@
 <h1><%= @lab.name %></h1>
 
-<h3>Current Scientists:</h3>
+<h3>Current Scientists & Total Experiments:</h3>
 <% @lab.scientists.each do |scientist| %>
   <ul>
-    <li><%= scientist.name %></li>
+    <li><%= scientist.name %>: <%= scientist.experiments.size %></li>
   </ul>
 <% end %>
